appId: com.example.my_app
---
- tapOn:
    id: "chat_item_conversation_0"
- waitForAnimationToEnd
- assertVisible:
    id: "conversation_btn_back"
- assertVisible:
    id: "conversation_field_message"
- assertVisible:
    id: "conversation_btn_send"
- tapOn:
    id: "conversation_field_message"
- inputText: "مرحبا، هل يمكنني الاستفسار عن الدورة؟"
- hideKeyboard
- tapOn:
    id: "conversation_btn_send"
- waitForAnimationToEnd
- tapOn:
    id: "conversation_btn_back"
